# Hydrogen-Music

./: .gitignore  .releaserc.json  README.md  desktop-lyric.html  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
.tauri/: hydrogen-music.key.pub
scripts/: build-kugou-api.cjs  build-portable.cjs  sync-version.cjs
src/: App.vue  desktop-lyric.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: index.js  merged-server.js  package.json
src-tauri/src/: backend.rs  lib.rs  main.rs  shortcuts.rs  tray.rs
src/components/: DesktopLyric.vue  LibraryDetail.vue  RadioDetail.vue  SearchInput.vue  SongFilterInput.vue
src/utils/: authority.js  desktopLyric.js  initApp.js  locaMusic.js  mediaSession.js  player.js  tauriBridge.js
src/views/: Settings.vue
